apport (0.130) UNRELEASED; urgency=low

  * bin/kernel_crashdump: Don't crash if vmcore.log does not exist.
  * crashdb_impl/launchpad.py: Tag bugs with the architecture they are
    being reported on.
  * bin/crash-digger: Revert catching "database is locked" errors
    during consolidation, since it just hides more fundamental errors.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Feb 2009 13:04:06 +0100

apport (0.129) jaunty; urgency=low

  * bin/apport-retrace: Log broken reports.
  * bin/apport-retrace: Do not mark bugs as invalid after they are
    already marked as a duplicate, since that does not work in
    Launchpad.
  * debian/local/ubuntu-fat-chroot: Symlink /target -> /, to work
    for crashes which appear in /target during installation.
  * bin/apport: Move argv length/usage help before lock check, so that
    it works if the user cannot lock /var/crash/.lock. Thanks to Kees
    Cook!
  * doc/package-hooks.txt: Point out apport.hookutils.
  * apport/ui.py: Check environment variable APPORT_REPORT_THIRDPARTY
    in addition to the 'thirdparty' configuration file option for
    overriding the "genuine distro package" check. Thanks to Oumar
    Aziz OUATTARA!
  * apport/crashdb_impl/launchpad.py: In third-party mode, report bugs
    against Launchpad projects. Thanks to Oumar
    Aziz OUATTARA for his branch! (LP: #213454)
  * bin/apportcheckresume: Include /var/lib/pm-utils/stress.log, too.
    Thanks to Andy Whitcroft for the initial patch, rewrote to use
    apport.hookutils.
  * apport/crashdb.py, init_duplicate_db(): Run an integrity check and
    raise exception if it fails, to avoid running the retracers on a
    corrupt duplicate db. Add test case to
    apport/crashdb_impl/memory.py.
  * bin/crash-digger: Create a backup of the duplicates database right
    after initializing it (which verifies integrity).
  * dupdb-admin: Add new command "consolidate".
  * apport/crashdb_impl/launchpad.py: Request bug lists with batch